2004-11-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Check for PG_DIAG_STATEMENT_POSITION as well as PQresultErrorField()
  - Add <cstring> include for select() check; needed for OS X w/gcc-3.3
2004-11-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers:
  - New
  - For distributing sample configuration headers
 configure.ac.in:
  - Replace autoconf's function checks with -Werror-proof code
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - Took out a lot of inlining
  - Added </<=/>/>= operators to icursor_iterator
  - Full test coverage
 include/pqxx/Makefile.am:
  - Reinstated compiler.h as a distributed (but not installed) file
  - Reinstated config-internal-autotools.h as distributed (but not installed)
 include/pqxx/result.hxx, src/result.hxx:
  - Took out a lot of inlining
 test/test081.cxx:
  - Test stride()
 test/test084.cxx:
  - Licked icursor_iterator problems (most bugs were in test program :)
  - Test </<=/>/>= operators
 tools/preprelease:
  - Fixed symbols listing; used to cut off function before second argument
2004-11-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx, src/util.cxx:
  - Lots more work on icursor_iterator but still not quite right
 test/test084.cxx:
  - Removed some illegal tricks
2004-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/util.cxx:
  - Set stringstream in to_string fallback code to C locale
2004-10-31  Roger Leigh <rleigh@debian.org>
 debian/control.in:
  - postgresql-dev depends on pkg-config
 debian/rules:
  - Remove all examples that include internal headers
2004-10-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - Warning: icursor_iterator constructors may now throw execptions
  - Made icursorstream keep track of its iterators
  - icursor_iterators no longer read data unless really needed
  - Made icursorstream/icursor_iterator "lazy," skipping over unread data
  - Fixed icursor_iterator equality comparison