@@ -1,1 +1,1 @@
-PQXXVERSION	2.4.1
+PQXXVERSION	2.4.2
