@@ -1,3 +1,6 @@
+2004-11-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/connection.hxx:
+  - Added missing "inline" for Windows case.  Thanks Michael J. Pedersen
 2004-11-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configure.ac.in:
   - Check for PG_DIAG_STATEMENT_POSITION as well as PQresultErrorField()
